appimages/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: app
